--- a/css/estilo-quartos.css
+++ b/css/estilo-quartos.css
@@ -1,5 +1,5 @@
 #img-background{
-  background-image: url(/assets/imgs/img-fundo.jpg);
+  background-image: url(../assets/imgs/img-fundo.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 99.2vw;
